fix: vertical alignment of consumables row (#710)

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -1813,12 +1813,13 @@ a:hover {
 .consumable-row {
   padding-right: 3px;
   width: 100%;
-  height: 30px;
+  /*height: 30px;*/
+  text-align: right;
 }
 
-.consumable-row .wrapper {
+/*.consumable-row .wrapper {
   float: right;
-}
+}*/
 
 .consumable-row .refill-button {
   width: 100px;
